Add validation to chips per-tool

--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/single/player-selection-single.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/single/player-selection-single.component.html
@@ -38,7 +38,7 @@
       ></ng-template>
 
       <fa-icon
-        *ngIf="!identity.extra?.isAcceptable"
+        *ngIf="identity.extra ? !identity.extra?.isAcceptable : false"
         [icon]="unacceptableIcon"
         [matTooltip]="identity.extra?.rejectionReason"
         class="unacceptable-icon"
