--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/gravity/gravity-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/gravity/gravity-gift-history.component.html
@@ -3,6 +3,7 @@
     <mat-card>
       <player-selection-single
         [allowSelection]="true"
+        [rejectionFn]="identityRejectionFn"
         (found)="onPlayerIdentityChange($event)"
         (selected)="playerIdentitySelected($event)"
       ></player-selection-single>
