--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -10,6 +10,7 @@
           <mat-card>
             <player-selection-bulk
               [allowSelection]="true"
+              [rejectionFn]="identityRejectionFn"
               (found)="onPlayerIdentitiesChange($event)"
               (selected)="playerIdentitySelected($event)"
             ></player-selection-bulk>
