--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.html
@@ -25,8 +25,8 @@
       [selectable]="allowSelection"
       [removable]="true"
       [value]="identity"
-      [class.identity-valid]="identity.extra?.isValid && identity.extra?.isAcceptable"
-      [class.identity-invalid]="identity.extra?.isInvalid || !identity.extra?.isAcceptable"
+      [class.identity-valid]="identity.extra && identity.extra?.isValid && identity.extra?.isAcceptable"
+      [class.identity-invalid]="identity.extra && (identity.extra?.isInvalid || !identity.extra?.isAcceptable)"
       [color]="identity.extra?.theme"
       (removed)="remove(identity)"
     >
@@ -38,7 +38,7 @@
       ></ng-template>
 
       <fa-icon
-        *ngIf="!identity.extra?.isAcceptable"
+        *ngIf="identity.extra ? !identity.extra?.isAcceptable : false"
         [icon]="unacceptableIcon"
         [matTooltip]="identity.extra?.rejectionReason"
         class="unacceptable-icon"
