--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/apollo/apollo-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/apollo/apollo-gift-history.component.html
@@ -9,6 +9,7 @@
         <mat-tab label="Player Selection">
           <player-selection-single
             [allowSelection]="true"
+            [rejectionFn]="identityRejectionFn"
             (found)="onPlayerIdentityChange($event)"
             (selected)="playerIdentitySelected($event)"
           ></player-selection-single>
