--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -10,6 +10,7 @@
           <mat-card>
             <player-selection-single
               [allowSelection]="true"
+              [rejectionFn]="identityRejectionFn"
               (found)="onPlayerIdentityChange($event)"
               (selected)="playerIdentitySelected($event)"
             ></player-selection-single>
