--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
@@ -3,6 +3,7 @@
     <mat-card>
       <player-selection-bulk
         [allowSelection]="true"
+        [rejectionFn]="identityRejectionFn"
         (found)="onPlayerIdentitiesChange($event)"
         (selected)="playerIdentitySelected($event)"
       >
