--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/single/player-selection-single.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/single/player-selection-single.component.html
@@ -25,8 +25,12 @@
       [selectable]="allowSelection"
       [removable]="true"
       [value]="identity"
-      [class.identity-valid]="identity.extra?.isValid && identity.extra?.isAcceptable"
-      [class.identity-invalid]="identity.extra?.isInvalid || !identity.extra?.isAcceptable"
+      [class.identity-valid]="
+        identity.extra && identity.extra?.isValid && identity.extra?.isAcceptable
+      "
+      [class.identity-invalid]="
+        identity.extra && (identity.extra?.isInvalid || !identity.extra?.isAcceptable)
+      "
       [color]="identity.extra?.theme"
       (removed)="remove(identity)"
     >
