Font Icons and Demonstration

--- a/StewardClient/src/global.scss
+++ b/StewardClient/src/global.scss
@@ -5,3 +5,4 @@
 @import '/src/styles/global/angular-material-drawer.scss';
 @import '/src/styles/global/angular-material-tabs.scss';
 @import '/src/styles/global/default-page-layout.scss';
+@import '/src/assets/icon-font/style.scss';
