--- a/StewardClient/src/app/shared/components/copy-to-clipboard/copy-to-clipboard.component.html
+++ b/StewardClient/src/app/shared/components/copy-to-clipboard/copy-to-clipboard.component.html
@@ -1,1 +1,7 @@
 <p>copy-to-clipboard works!</p>
+<fa-icon
+  [icon]="copyIcon"
+  title="Click to copy to clipboard"
+  [cdkCopyToClipboard]="error | bigjson"
+  class="warning"
+></fa-icon>
