--- a/StewardClient/src/app/pages/ticket-app/pages/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/pages/ticket-app/pages/sunrise/sunrise.component.html
@@ -1,4 +1,4 @@
-<sunrise-player-details [gamertag]="gamertag"></sunrise-player-details>
+<sunrise-player-sidebar-details [gamertag]="gamertag"></sunrise-player-sidebar-details>
 <sunrise-user-flags [xuid]="xuid" class="top-spacing"></sunrise-user-flags>
 <sunrise-ban-history [xuid]="xuid" class="top-spacing"></sunrise-ban-history>
 <quick-actions class="top-spacing">
