--- a/StewardClient/src/app/pages/ticket-app/pages/gravity/gravity.component.html
+++ b/StewardClient/src/app/pages/ticket-app/pages/gravity/gravity.component.html
@@ -1,4 +1,4 @@
-<gravity-player-details [gamertag]="gamertag"></gravity-player-details>
+<gravity-player-sidebar-details [gamertag]="gamertag"></gravity-player-sidebar-details>
 <quick-actions class="top-spacing">
   <go-to-inventory-button [gameTitle]="gameTitle" [xuid]="xuid"></go-to-inventory-button>
 </quick-actions>
