--- a/StewardClient/src/app/pages/ticket-app/pages/opus/opus.component.html
+++ b/StewardClient/src/app/pages/ticket-app/pages/opus/opus.component.html
@@ -1,4 +1,4 @@
-<opus-player-details [gamertag]="gamertag"></opus-player-details>
+<opus-player-sidebar-details [gamertag]="gamertag"></opus-player-sidebar-details>
 <quick-actions class="top-spacing">
   <go-to-inventory-button [gameTitle]="gameTitle" [xuid]="xuid"></go-to-inventory-button>
 </quick-actions>
