--- a/StewardClient/src/app/pages/ticket-app/pages/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/pages/ticket-app/pages/sunrise/sunrise.component.html
@@ -1,6 +1,17 @@
-<sunrise-player-sidebar-details [gamertag]="gamertag"></sunrise-player-sidebar-details>
-<sunrise-user-flags [xuid]="xuid" class="top-spacing"></sunrise-user-flags>
-<sunrise-ban-history [xuid]="xuid" class="top-spacing"></sunrise-ban-history>
-<quick-actions class="top-spacing">
-  <go-to-inventory-button [gameTitle]="gameTitle" [xuid]="xuid"></go-to-inventory-button>
-</quick-actions>
+<ng-container *ngIf="!identityError; else identityErrorState">
+  <sunrise-player-sidebar-details [gamertag]="gamertag"></sunrise-player-sidebar-details>
+  <sunrise-user-flags [xuid]="xuid" class="top-spacing"></sunrise-user-flags>
+  <sunrise-ban-history [xuid]="xuid" class="top-spacing"></sunrise-ban-history>
+  <quick-actions class="top-spacing">
+    <go-to-inventory-button [gameTitle]="gameTitle" [xuid]="xuid"></go-to-inventory-button>
+  </quick-actions>
+</ng-container>
+
+<ng-template #identityErrorState>
+  <mat-card class="lookup-failed-card">
+    <mat-card-title>Sunrise Lookup Failed</mat-card-title>
+    <mat-card-content>
+      <p>"{{ lookupGamertag }}"" does not exist.</p>
+    </mat-card-content>
+  </mat-card>
+</ng-template>
