--- a/StewardClient/src/app/pages/ticket-app/pages/gravity/gravity.component.scss
+++ b/StewardClient/src/app/pages/ticket-app/pages/gravity/gravity.component.scss
@@ -2,3 +2,13 @@
   margin-top: 20px;
   display: block;
 }
+
+.lookup-failed-card {
+  margin-top: 40px;
+  padding: 30px 0px;
+  text-align: center;
+
+  mat-card-content {
+    margin-top: 20px;
+  }
+}
