--- a/StewardClient/icon-font/turn10-icons-v1.0/variables.scss
+++ b/StewardClient/icon-font/turn10-icons-v1.0/variables.scss
@@ -1,10 +1,9 @@
-$icomoon-font-family: "turn10-icons" !default;
-$icomoon-font-path: "fonts" !default;
+$icomoon-font-family: 'turn10-icons' !default;
+$icomoon-font-path: 'fonts' !default;
 
-$t10-error: "\e900";
-$t10-gtag: "\e901";
-$t10-logo-black: "\e902";
-$t10-logo-white: "\e903";
-$t10-t10id: "\e904";
-$t10-xuid: "\e905";
-
+$t10-error: '\e900';
+$t10-gtag: '\e901';
+$t10-logo-black: '\e902';
+$t10-logo-white: '\e903';
+$t10-t10id: '\e904';
+$t10-xuid: '\e905';
