--- a/StewardClient/src/assets/icon-font/style.scss
+++ b/StewardClient/src/assets/icon-font/style.scss
@@ -1,12 +1,14 @@
-@import "variables";
+@import 'variables';
 
 @font-face {
   font-family: '#{$icomoon-font-family}';
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?p76da0');
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?p76da0#iefix') format('embedded-opentype'),
+  src: url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?p76da0');
+  src: url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?p76da0#iefix')
+      format('embedded-opentype'),
     url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?p76da0') format('truetype'),
     url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?p76da0') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?p76da0##{$icomoon-font-family}') format('svg');
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?p76da0##{$icomoon-font-family}')
+      format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -29,33 +31,32 @@
 
 .t10-error {
   &:before {
-    content: $t10-error; 
+    content: $t10-error;
   }
 }
 .t10-gtag {
   &:before {
-    content: $t10-gtag; 
+    content: $t10-gtag;
   }
 }
 .t10-logo-black {
   &:before {
-    content: $t10-logo-black; 
+    content: $t10-logo-black;
   }
 }
 .t10-logo-white {
   &:before {
-    content: $t10-logo-white;     
+    content: $t10-logo-white;
     color: #fff;
   }
 }
 .t10-t10id {
   &:before {
-    content: $t10-t10id; 
+    content: $t10-t10id;
   }
 }
 .t10-xuid {
   &:before {
-    content: $t10-xuid; 
+    content: $t10-xuid;
   }
 }
-
