--- a/StewardClient/src/app/shared/components/copy-to-clipboard/copy-to-clipboard.component.html
+++ b/StewardClient/src/app/shared/components/copy-to-clipboard/copy-to-clipboard.component.html
@@ -1,6 +1,6 @@
 <fa-icon
   [icon]="copyIcon"
   title="Click to copy to clipboard"
-  [cdkCopyToClipboard]="content | bigjson"
-  class="warning"
+  [cdkCopyToClipboard]="content"
+  class="copy"
 ></fa-icon>
