--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
@@ -25,6 +25,8 @@
     </mat-card>
   </div>
 
+  <player-lookup-results [identity]="selectedPlayer"></player-lookup-results>
+
   <div class="default-page-layout-right">
     <mat-card>
       <mat-card-content>
