--- a/StewardClient/src/app/shared/views/player-lookup-results/player-lookup-results.component.html
+++ b/StewardClient/src/app/shared/views/player-lookup-results/player-lookup-results.component.html
@@ -1,1 +1,9 @@
-<p>player-lookup-results works!</p>
+<mat-card>
+  <mat-card-content>
+    <span class="icon t10-gtag"></span>&nbsp;
+    <span>{{ identity.gamertag }}</span>
+
+    <span class="icon t10-xuid"></span>&nbsp;
+    <span>{{ identity.xuid }}</span>
+  </mat-card-content>
+</mat-card>
