--- a/StewardClient/src/app/shared/views/player-details/player-details-item/player-details-item.scss
+++ b/StewardClient/src/app/shared/views/player-details/player-details-item/player-details-item.scss
@@ -1,4 +1,4 @@
-@import '/src/styles/mixins/variables.scss';
+@import '/src/styles/mixins';
 
 div.player-details-item {
   border-top: 1px solid rgba(0, 0, 0, 0.12);
