--- a/StewardClient/src/global.scss
+++ b/StewardClient/src/global.scss
@@ -1,4 +1,4 @@
-@import '/src/styles/mixins/variables.scss';
+@import '/src/styles/mixins';
 @import '/src/styles/mixins/variables-introspection.scss';
 @import '/src/styles/global/angular-material.scss';
 @import '/src/styles/global/body.scss';
