--- a/StewardClient/src/app/pages/error/error.component.scss
+++ b/StewardClient/src/app/pages/error/error.component.scss
@@ -1,4 +1,4 @@
-@import '/src/styles/mixins/variables.scss';
+@import '/src/styles/mixins';
 
 :host {
   margin: $gap-vertical-layout $gap-side-gutter;
