--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.scss
@@ -1,4 +1,4 @@
-@import '/src/styles/mixins/variables.scss';
+@import '/src/styles/mixins';
 
 mat-form-field {
   max-width: 95%; // TODO: This is a hack to avoid the negative margin hiding in here from generating horizontal scroll bars.
