--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/user-banning.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/user-banning.component.scss
@@ -1,4 +1,4 @@
-@import '/src/styles/mixins/variables.scss';
+@import '/src/styles/mixins';
 
 .mat-stroked-button {
   border-color: rgba(mat-color($app-background, default-contrast), 0.333);
