--- a/StewardClient/src/styles/mixins/_index.scss
+++ b/StewardClient/src/styles/mixins/_index.scss
@@ -6,5 +6,5 @@
 
 $icomoon-font-path: '/assets/icon-font/fonts';
 @import '/src/assets/icon-font/variables.scss';
-@import './variables/colors.scss';
+@import './variables';
 @import './helpers';
