Replace all mat-color usages with app-color-*

--- a/StewardClient/src/app/pages/navbar-app/components/player-selection-old/player-selection-chip-list/player-selection-chip-list.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection-old/player-selection-chip-list/player-selection-chip-list.component.scss
@@ -10,9 +10,9 @@ mat-chip {
 }
 
 .identity-valid {
-  background-color: mat-color($app-primary, 'lighter');
+  background-color: app-color-lighter($app-primary);
 }
 
 .identity-invalid {
-  background-color: mat-color($app-warn, 'lighter');
+  background-color: app-color-lighter($app-warn);
 }
