--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gifting-result/gifting-result.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gifting-result/gifting-result.component.scss
@@ -5,6 +5,6 @@ div {
   overflow: auto;
 
   .gift-result-error {
-    background-color: mat-color($app-warn, 200);
+    background-color: app-color-lighter($app-warn);
   }
 }
