--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/duration-picker/duration-picker.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/duration-picker/duration-picker.component.scss
@@ -21,6 +21,6 @@
 }
 
 .mat-button-toggle-checked {
-  background-color: mat-color($app-primary);
-  color: mat-color($app-primary, default-contrast);
+  background-color: app-color-default($app-primary);
+  color: app-color-default-contrast($app-primary);
 }
