--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.scss
@@ -9,7 +9,7 @@
 }
 
 .navbar-button-active {
-  background-color: mat-color($app-accent);
+  background-color: app-color-default($app-accent);
   color: #fff !important;
 }
 
@@ -23,5 +23,5 @@
 }
 
 .mat-stroked-button {
-  border-color: rgba(mat-color($app-background, default-contrast), 0.333);
+  border-color: app-color-default-contrast($app-background, 0.333);
 }
