--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.scss
@@ -22,9 +22,9 @@ mat-chip {
 }
 
 .identity-valid {
-  background-color: mat-color($app-primary, 'lighter');
+  background-color: app-color-lighter($app-primary);
 }
 
 .identity-invalid {
-  background-color: mat-color($app-warn, 'lighter');
+  background-color: app-color-lighter($app-warn);
 }
