--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/single/player-selection-single.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/single/player-selection-single.component.scss
@@ -22,11 +22,11 @@ mat-chip {
 }
 
 .identity-valid {
-  background-color: mat-color($app-primary, 'lighter');
+  background-color: app-color-lighter($app-primary);
 }
 
 .identity-invalid {
-  background-color: mat-color($app-warn, 'lighter');
+  background-color: app-color-lighter($app-warn);
 }
 
 :host ::ng-deep .mat-chip-list-wrapper {
