--- a/StewardClient/src/app/pages/navbar-app/navbar-app.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/navbar-app.component.scss
@@ -50,7 +50,7 @@ data-privacy-notice {
   margin-right: 10px;
 
   &:hover {
-    color: mat-color($app-primary);
+    color: app-color-default($app-primary);
   }
 
   &:focus {
@@ -59,7 +59,7 @@ data-privacy-notice {
 }
 
 .header-selected {
-  color: mat-color($app-primary);
+  color: app-color-default($app-primary);
 }
 
 :host ::ng-deep mat-drawer > * {
