--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gifting.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gifting.component.scss
@@ -1,5 +1,5 @@
 @import '/src/styles/mixins';
 
 .mat-stroked-button {
-  border-color: rgba(mat-color($app-background, default-contrast), 0.333);
+  border-color: app-color-default-contrast($app-background, default-contrast, 0.333);
 }
