--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-options/ban-options.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-options/ban-options.component.scss
@@ -17,8 +17,8 @@
 }
 
 .mat-button-toggle-checked {
-  background-color: mat-color($app-primary);
-  color: mat-color($app-primary, default-contrast);
+  background-color: app-color-default($app-primary);
+  color: app-color-default-contrast($app-primary);
 }
 
 ul {
