--- a/StewardClient/src/app/pages/ticket-app/components/overlay/overlay.component.scss
+++ b/StewardClient/src/app/pages/ticket-app/components/overlay/overlay.component.scss
@@ -18,11 +18,11 @@ nav > span {
 }
 
 .warnings fa-icon {
-  color: mat-color($app-warn);
+  color: app-color-default($app-warn);
 }
 
 .info fa-icon {
-  color: mat-color($app-primary, lighter);
+  color: app-color-lighter($app-primary);
 }
 
 .location {
