--- a/StewardClient/src/app/shared/components/error-spinner/error-spinner.component.scss
+++ b/StewardClient/src/app/shared/components/error-spinner/error-spinner.component.scss
@@ -1,11 +1,11 @@
 @import '/src/styles/mixins';
 
 .spinner {
-  color: mat-color($app-primary);
+  color: app-color-default($app-primary);
 }
 
 .warning {
-  color: mat-color($app-warn);
+  color: app-color-default($app-warn);
   cursor: pointer;
 }
 
