--- a/StewardClient/src/app/shared/views/player-details/player-details-item/player-details-item.scss
+++ b/StewardClient/src/app/shared/views/player-details/player-details-item/player-details-item.scss
@@ -28,7 +28,7 @@ div.player-details-item {
 
 .copied-data-message {
   position: absolute;
-  background-color: mat-color($app-primary);
+  background-color: app-color-default($app-primary);
   padding: 10px 15px;
   border-radius: 5px;
   color: #fff;
