--- a/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.scss
+++ b/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.scss
@@ -10,7 +10,7 @@ mat-panel-title {
 }
 
 .item-id-text {
-  color: mat-color($app-primary);
+  color: app-color-default($app-primary);
 }
 
 .mat-column-quantity {
