prettier & style tweaks

--- a/StewardClient/src/app/pages/demo/colors/colors.component.html
+++ b/StewardClient/src/app/pages/demo/colors/colors.component.html
@@ -2,9 +2,9 @@
 
 <section class="background-first">
   <h3>
-    background = app-color-*
-    <br>
-    foreground = app-color-*-contrast
+    background: app-color-*
+    <br />
+    foreground: app-color-*-contrast
   </h3>
   <div *ngFor="let theme of ['background', 'primary', 'accent', 'warn']" [class]="theme">
     <ul>
@@ -15,13 +15,13 @@
   </div>
 </section>
 
-<hr>
+<hr />
 
 <section class="foreground-first">
   <h3>
-    foreground = app-color-*
-    <br>
-    background = app-color-*-contrast
+    foreground: app-color-*
+    <br />
+    background: app-color-*-contrast
   </h3>
   <div *ngFor="let theme of ['background', 'primary', 'accent', 'warn']" [class]="theme">
     <ul>
