--- a/StewardClient/src/app/pages/demo/icons/icons.component.html
+++ b/StewardClient/src/app/pages/demo/icons/icons.component.html
@@ -3,18 +3,15 @@
 <p style="font-size: 32px; background-color: lightgrey">
   <span class="icon t10-t10id"></span>&nbsp; <span class="icon t10-gtag"></span>&nbsp;
   <span class="icon t10-xuid"></span>&nbsp; <span class="icon t10-error"></span>&nbsp;
-  <span class="icon t10-logo-black"></span>&nbsp;
-  <span class="icon t10-logo-white"></span>&nbsp;
+  <span class="icon t10-logo-black"></span>&nbsp; <span class="icon t10-logo-white"></span>&nbsp;
 </p>
 <p style="font-size: 32px; background-color: white">
   <span class="icon t10-t10id"></span>&nbsp; <span class="icon t10-gtag"></span>&nbsp;
   <span class="icon t10-xuid"></span>&nbsp; <span class="icon t10-error"></span>&nbsp;
-  <span class="icon t10-logo-black"></span>&nbsp;
-  <span class="icon t10-logo-white"></span>&nbsp;
+  <span class="icon t10-logo-black"></span>&nbsp; <span class="icon t10-logo-white"></span>&nbsp;
 </p>
 <p style="font-size: 32px; background-color: black; color: white">
   <span class="icon t10-t10id"></span>&nbsp; <span class="icon t10-gtag"></span>&nbsp;
   <span class="icon t10-xuid"></span>&nbsp; <span class="icon t10-error"></span>&nbsp;
-  <span class="icon t10-logo-black"></span>&nbsp;
-  <span class="icon t10-logo-white"></span>&nbsp;
+  <span class="icon t10-logo-black"></span>&nbsp; <span class="icon t10-logo-white"></span>&nbsp;
 </p>
