player lookup result component created and integrated into player detail pages. Removed copy-to-clipboard component, I'm going to learn about directives and create one of those to add onto the player-lookup-results component

--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/apollo/apollo-user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/apollo/apollo-user-details.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="identity && !identity?.error; else noIdentity">
-  <h1>{{ identity.gamertag }} (xuid: {{ identity.xuid !== undefined ? identity.xuid : '?' }})</h1>
+  <player-lookup-results [identity]="identity"></player-lookup-results>
   <section>
     <mat-tab-group animationDuration="0ms">
       <mat-tab label="Inventory">
