--- a/StewardClient/src/app/shared/views/player-lookup-results/player-lookup-results.component.scss
+++ b/StewardClient/src/app/shared/views/player-lookup-results/player-lookup-results.component.scss
@@ -1,1 +1,10 @@
 @import '/src/styles/mixins/variables.scss';
+
+.icon {
+  margin-left: .5em;
+  font-size: 24px;
+}
+
+.identifier {
+  font-size: 24px;
+}
