added json dump

--- a/StewardClient/src/app/pages/ticket-app/pages/gravity/gravity.component.html
+++ b/StewardClient/src/app/pages/ticket-app/pages/gravity/gravity.component.html
@@ -9,7 +9,8 @@
   <mat-card class="lookup-failed-card">
     <mat-card-title>Gravity Lookup Failed</mat-card-title>
     <mat-card-content>
-      <p>"{{ lookupGamertag }}"" does not exist.</p>
+      <p>"{{ lookupGamertag }}" does not exist.</p>
+      <json-dump [input]="identityError">Lookup Error</json-dump>
     </mat-card-content>
   </mat-card>
 </ng-template>
