--- a/StewardClient/src/global.scss
+++ b/StewardClient/src/global.scss
@@ -6,3 +6,4 @@
 @import '/src/styles/global/angular-material-tabs.scss';
 @import '/src/styles/global/default-page-layout.scss';
 @import '/src/assets/icon-font/style.scss';
+@import '/src/styles/global/hover-to-copy-directive.scss';
