--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -9,6 +9,7 @@
         <mat-tab label="Player Selection">
           <mat-card>
             <player-selection-single
+              [disableLookupTypes]="['t10Id']"
               [allowSelection]="true"
               [rejectionFn]="identityRejectionFn"
               (found)="onPlayerIdentityChange($event)"
