--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -9,6 +9,7 @@
         <mat-tab label="Player Selection">
           <mat-card>
             <player-selection-bulk
+              [disableLookupTypes]="['t10Id']"
               [allowSelection]="true"
               [rejectionFn]="identityRejectionFn"
               (found)="onPlayerIdentitiesChange($event)"
