--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
@@ -2,6 +2,7 @@
   <div class="default-page-layout-left">
     <mat-card>
       <player-selection-bulk
+        [disableLookupTypes]="['t10Id']"
         [allowSelection]="true"
         [rejectionFn]="identityRejectionFn"
         (found)="onPlayerIdentitiesChange($event)"
