Fix infinite redirect on navigation when sidebar open

--- a/StewardClient/src/app/pages/navbar-app/navbar-app.component.html
+++ b/StewardClient/src/app/pages/navbar-app/navbar-app.component.html
@@ -1,6 +1,6 @@
 <navbar></navbar>
 <mat-drawer-container autosize>
-  <mat-drawer #drawer mode="over" position="end" (closed)="clearSidebar()">
+  <mat-drawer #drawer mode="over" position="end" [opened]="drawerOpened" (closed)="clearSidebar()">
     <pre>{{ location }}</pre>
     <router-outlet name="sidebar"></router-outlet>
   </mat-drawer>
