--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/gravity/gravity-user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/gravity/gravity-user-details.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="identity && !identity?.error; else noIdentity">
-  <player-lookup-results [identity]="identity"></player-lookup-results>
+  <player-identity-results [identity]="identity"></player-identity-results>
   <section>
     <mat-tab-group animationDuration="0ms">
       <mat-tab label="Inventory">
