--- a/StewardClient/src/app/shared/views/player-identity-results/player-identity-results.component.scss
+++ b/StewardClient/src/app/shared/views/player-identity-results/player-identity-results.component.scss
@@ -1,5 +1,3 @@
-@import '/src/styles/mixins/variables.scss';
-
 .icon {
   margin-left: 0.5em;
   font-size: 24px;
@@ -7,4 +5,5 @@
 
 .identifier {
   font-size: 24px;
+  white-space: nowrap;
 }
