--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.scss
@@ -20,7 +20,8 @@ model-dump {
   }
 }
 
-mat-card {
+mat-card, toggle-list-ez {
+  display: block;
   margin: 1em;
   & > *:not(table) {
     display: block;
