--- a/StewardClient/src/app/pages/tools/pages/gifting/woodstock/woodstock-gifting.component.html
+++ b/StewardClient/src/app/pages/tools/pages/gifting/woodstock/woodstock-gifting.component.html
@@ -81,6 +81,16 @@
           [usingPlayerIdentities]="isUsingPlayerIdentities"
         ></woodstock-gift-livery>
       </mat-tab>
+      <mat-tab [disabled]="disableGiftingLiveries">
+        <ng-template mat-tab-label>
+          <span [matTooltip]="giftingLiveryTooltip">Gift Special Liveries</span>
+        </ng-template>
+        <woodstock-gift-special-liveries
+          [playerIdentities]="selectedPlayerIdentities"
+          [lspGroup]="selectedLspGroup"
+          [usingPlayerIdentities]="isUsingPlayerIdentities"
+        ></woodstock-gift-special-liveries>
+      </mat-tab>
     </mat-tab-group>
   </div>
 </div>
