--- a/StewardClient/src/app/pages/tools/pages/gifting/woodstock/woodstock-gifting.component.html
+++ b/StewardClient/src/app/pages/tools/pages/gifting/woodstock/woodstock-gifting.component.html
@@ -86,6 +86,7 @@
           <span [matTooltip]="giftingLiveryTooltip">Gift Special Liveries</span>
         </ng-template>
         <woodstock-gift-special-liveries
+          [contract]="specialLiveriesContract"
           [playerIdentities]="selectedPlayerIdentities"
           [lspGroup]="selectedLspGroup"
           [usingPlayerIdentities]="isUsingPlayerIdentities"
